# Autonomous-linkedIn-branding-and-trend-engine

./: README.md  pyproject.toml
src/project1/: crew.py  main.py
src/project1/config/: agents.yaml  tasks.yaml
