[project]
name = "project1"
version = "0.1.0"
description = "project1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
project1 = "project1.main:run"
run_crew = "project1.main:run"
train = "project1.main:train"
replay = "project1.main:replay"
test = "project1.main:test"
run_with_trigger = "project1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
